# Copyright 2023 Uber Technologies, Inc.
# Licensed under the MIT License

load("@hermetic_cc_toolchain//toolchain:defs.bzl", "declare_files")
load("@hermetic_cc_toolchain//toolchain/private:cc_toolchains.bzl", "declare_cc_toolchains")

package(
    default_visibility = ["//visibility:public"],
)

declare_files(
    os = {os},
    extra_files = {extra_files},
    target_extra_files = {target_extra_files},
)

declare_cc_toolchains(
    os = {os},
    zig_sdk_path = {zig_sdk_path},
    copts = {copts},
    conlyopts = {conlyopts},
    cxxopts = {cxxopts},
    linkopts = {linkopts},
    static_linkopts = {static_linkopts},
    dynamic_linkopts = {dynamic_linkopts},
    target_copts = {target_copts},
    target_conlyopts = {target_conlyopts},
    target_cxxopts = {target_cxxopts},
    target_linkopts = {target_linkopts},
    target_static_linkopts = {target_static_linkopts},
    target_dynamic_linkopts = {target_dynamic_linkopts},
)
